Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,87 @@
     ]
   },
   {
+    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
+    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
+    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
+    "answers": [
+      {
+        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
+        "correct": true
+      },
+      {
+        "text": "Các đối thủ đều có doanh số tốt hơn.",
+        "correct": false
+      },
+      {
+        "text": "CX-5 không còn sản xuất nữa.",
+        "correct": false
+      },
+      {
+        "text": "Territory là mẫu xe mới nhất trên thị trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Mất cơ hội chữa khỏi ung thư vì khám sai nơi",
+    "content": "Ông Thành, 63 tuổi, phát hiện ung thư tuyến tiền liệt giai đoạn muộn do không được tư vấn đúng khi xét nghiệm PSA cao nhưng không được kiểm tra thêm. Mặc dù đã phẫu thuật cắt tuyến tiền liệt, ông phải đối mặt với ung thư tái phát và lựa chọn giữa cắt bỏ tinh hoàn hoặc dùng liệu pháp nội tiết tố tốn kém và có nhiều tác dụng phụ. Nếu được phát hiện sớm, tỷ lệ chữa khỏi ung thư tuyến tiền liệt có thể lên tới 100%, nhưng hiện tại, khoảng 75-80% bệnh nhân đến khám khi đã ở giai đoạn muộn.",
+    "link": "https://vnexpress.net/mat-co-hoi-chua-khoi-ung-thu-vi-kham-sai-noi-4861903.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao ông Thành mất cơ hội chữa khỏi ung thư tuyến tiền liệt?",
+    "answers": [
+      {
+        "text": "Vì không được xét nghiệm PSA khi có chỉ số cao.",
+        "correct": true
+      },
+      {
+        "text": "Vì ông không có triệu chứng rõ ràng.",
+        "correct": false
+      },
+      {
+        "text": "Vì bệnh viện không đủ trang thiết bị.",
+        "correct": false
+      },
+      {
+        "text": "Vì ông không đi khám định kỳ.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hai con của Từ Hy Viên vắng mặt trong tang lễ của mẹ",
+    "content": "Nữ diễn viên Từ Hy Viên đã qua đời và được an táng tại Nghĩa trang Kim Bảo Sơn ở Đài Loan. Tang lễ của cô diễn ra với sự tham gia của chồng hiện tại và gia đình, nhưng hai con của nữ diễn viên không có mặt. Mẹ kế của các con cho biết không nhận được thông báo về tang lễ, dẫn đến việc hai bé không thể tiễn đưa mẹ. Tình trạng này đã gây ra nhiều tranh cãi trên mạng xã hội.",
+    "link": "https://dantri.com.vn/giai-tri/hai-con-cua-tu-hy-vien-vang-mat-trong-tang-le-cua-me-20250319172644395.htm",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao hai con của Từ Hy Viên không tham dự tang lễ của mẹ?",
+    "answers": [
+      {
+        "text": "Vì không nhận được thông báo về tang lễ.",
+        "correct": true
+      },
+      {
+        "text": "Vì các con đang ở Đài Loan.",
+        "correct": false
+      },
+      {
+        "text": "Vì các con không muốn đi.",
+        "correct": false
+      },
+      {
+        "text": "Vì các con đang ở với ông bà.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Xu hướng 'nghỉ việc trả thù' của Gen Z Mỹ",
     "content": "Nhiều nhân viên Gen Z tại Mỹ đang theo xu hướng 'nghỉ việc trả thù', tức là họ cố tình xin nghỉ việc vào những thời điểm bận rộn nhất của công ty để gây rối loạn cho doanh nghiệp. Các nhân viên này thường nghỉ việc mà không thông báo trước, phản ánh sự bất mãn với cách quản lý và điều kiện làm việc. Theo khảo sát, 65% nhân viên cảm thấy mất động lực trong công việc, trong khi 83% Gen Z đang phải đối mặt với tình trạng kiệt sức, dẫn đến việc nghỉ việc như một cách phản kháng. Các chuyên gia khuyên rằng thay vì bỏ việc một cách bốc đồng, nhân viên nên tìm cách giao tiếp cởi mở với cấp trên.",
     "link": "https://vnexpress.net/xu-huong-nghi-viec-tra-thu-cua-gen-z-my-4863307.html",
@@ -1843,32 +1924,28 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
-    "cat": "suc-khoe",
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
     "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -1959,6 +2036,37 @@
     ]
   },
   {
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "answers": [
+      {
+        "text": "Khó thở và ho khan kéo dài",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ăn uống, sinh hoạt thế nào khi còn một quả thận?",
     "content": "Bài viết cung cấp thông tin về cách sinh hoạt và chế độ ăn uống cho người còn một quả thận. Sau phẫu thuật cắt thận, người bệnh cần chú ý bảo vệ sức khỏe, tránh các môn thể thao va chạm và áp dụng chế độ dinh dưỡng lành mạnh, cân bằng, giảm muối và hạn chế thực phẩm chứa kali, phốt pho. Đồng thời, cần theo dõi sức khỏe định kỳ và thận trọng khi sử dụng thuốc không kê đơn.",
     "link": "https://vnexpress.net/an-uong-sinh-hoat-the-nao-khi-con-mot-qua-than-4863313.html",
@@ -1981,33 +2089,6 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -3374,33 +3455,6 @@
     ]
   },
   {
-    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
-    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
-    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
-    "answers": [
-      {
-        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường sản xuất xe điện mới.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do tài chính cá nhân của nhân viên.",
-        "correct": false
-      },
-      {
-        "text": "Để mở rộng thị trường sang châu Á.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
     "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
     "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
@@ -3423,6 +3477,33 @@
       },
       {
         "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
         "correct": false
       }
     ]
