--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,37 @@
     ]
   },
   {
+    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
+    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
+    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
+    "answers": [
+      {
+        "text": "Tài chính - ngân hàng",
+        "correct": true
+      },
+      {
+        "text": "Báo chí truyền thông",
+        "correct": false
+      },
+      {
+        "text": "Kỹ thuật phần mềm",
+        "correct": false
+      },
+      {
+        "text": "Nghệ thuật sáng tạo",
+        "correct": false
+      },
+      {
+        "text": "Y tế và công nghệ sinh học",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
     "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
     "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
@@ -3455,33 +3486,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -3504,6 +3508,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
@@ -3934,37 +3965,6 @@
     ]
   },
   {
-    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
-    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
-    "answers": [
-      {
-        "text": "7 kg",
-        "correct": true
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      },
-      {
-        "text": "6 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
     "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
     "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
@@ -3991,6 +3991,37 @@
       },
       {
         "text": "Chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
+    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
+    "answers": [
+      {
+        "text": "7 kg",
+        "correct": true
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      },
+      {
+        "text": "6 kg",
         "correct": false
       }
     ]
@@ -5119,37 +5150,6 @@
       },
       {
         "text": "Perth",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cyclone RT3e 2025 - xe ga Trung Quốc nhái Lambretta",
-    "content": "Cyclone RT3e 2025 là mẫu xe ga mới của thương hiệu Trung Quốc Cyclone, có thiết kế giống xe Lambretta cổ điển. Xe được trang bị động cơ 247 phân khối, công suất 26 mã lực, và được bán ra tại Malaysia vào tháng 6 năm 2025 với giá 2.900 USD. RT3e có nhiều tính năng hiện đại như phanh ABS, màn hình màu và hệ thống khóa thông minh.",
-    "link": "https://vnexpress.net/cyclone-rt3e-2025-xe-ga-trung-quoc-nhai-lambretta-4862718.html",
-    "cat": "oto-xe-may",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Cyclone RT3e 2025 có đặc điểm gì nổi bật?",
-    "answers": [
-      {
-        "text": "Thiết kế giống xe Lambretta và động cơ 247 phân khối",
-        "correct": true
-      },
-      {
-        "text": "Động cơ 500 phân khối và thiết kế hiện đại",
-        "correct": false
-      },
-      {
-        "text": "Không có phanh ABS và hộc chứa đồ nhỏ",
-        "correct": false
-      },
-      {
-        "text": "Giá bán 1.500 USD tại Malaysia",
-        "correct": false
-      },
-      {
-        "text": "Sử dụng động cơ điện hoàn toàn",
         "correct": false
       }
     ]
