Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Những dịch vụ thay đổi theo lối sống 'cú đêm' của Gen Z",
+    "content": "Nhu cầu sinh hoạt muộn của Gen Z đã dẫn đến sự gia tăng của các dịch vụ mở xuyên đêm tại Hà Nội, như quán cà phê, nhà hàng và các điểm vui chơi. Nhiều quán đã điều chỉnh thời gian phục vụ để đáp ứng nhu cầu của giới trẻ, với các hoạt động như học tập, vui chơi và ăn uống diễn ra từ chiều đến khuya. Khảo sát cho thấy số lượng người trẻ đi ngủ sau 23h ngày càng nhiều, cho thấy sự thay đổi trong lối sống và thói quen sinh hoạt của họ.",
+    "link": "https://vnexpress.net/nhung-dich-vu-thay-doi-theo-loi-song-cu-dem-cua-gen-z-4862469.html",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Các dịch vụ nào đang thay đổi để phục vụ lối sống của Gen Z?",
+    "answers": [
+      {
+        "text": "Quán cà phê và nhà hàng mở xuyên đêm",
+        "correct": true
+      },
+      {
+        "text": "Rạp chiếu phim mở cửa đến sáng",
+        "correct": false
+      },
+      {
+        "text": "Các trung tâm thương mại hoạt động 24/24",
+        "correct": false
+      },
+      {
+        "text": "Cửa hàng tạp hóa mở muộn",
+        "correct": false
+      },
+      {
+        "text": "Trung tâm thể dục thể thao hoạt động đêm",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Vệ sĩ của Messi muốn thượng đài với Logan Paul",
     "content": "Vệ sĩ của Lionel Messi, Yassine Chueko, đã bày tỏ ý muốn thượng đài với Logan Paul thay cho Messi sau khi Paul thách thức Messi trong bối cảnh tranh chấp pháp lý giữa hai thương hiệu nước tăng lực Mas+ của Messi và Prime của Paul. Paul đã chỉ trích Messi về việc sao chép thiết kế thương hiệu và đề nghị rút đơn kiện nếu Messi đồng ý thượng đài. Chueko, cựu đặc nhiệm Hải quân và có kinh nghiệm thi đấu, khẳng định Paul nên đấu với anh thay vì với Messi.",
     "link": "https://vnexpress.net/ve-si-cua-messi-muon-thuong-dai-voi-logan-paul-4863504.html",
@@ -174,64 +205,6 @@
       },
       {
         "text": "KSI",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
-    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
-    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
-    "cat": "giao-duc",
-    "positivity": 7,
-    "importance": 9,
-    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
-    "answers": [
-      {
-        "text": "Tài chính - ngân hàng",
-        "correct": true
-      },
-      {
-        "text": "Báo chí truyền thông",
-        "correct": false
-      },
-      {
-        "text": "Kỹ thuật phần mềm",
-        "correct": false
-      },
-      {
-        "text": "Nghệ thuật sáng tạo",
-        "correct": false
-      },
-      {
-        "text": "Y tế và công nghệ sinh học",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
-    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
-    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
-    "cat": "oto-xe-may",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
-    "answers": [
-      {
-        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
-        "correct": true
-      },
-      {
-        "text": "Các đối thủ đều có doanh số tốt hơn.",
-        "correct": false
-      },
-      {
-        "text": "CX-5 không còn sản xuất nữa.",
-        "correct": false
-      },
-      {
-        "text": "Territory là mẫu xe mới nhất trên thị trường.",
         "correct": false
       }
     ]
@@ -313,6 +286,64 @@
       },
       {
         "text": "Chỉ đơn giản là thích nghỉ việc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phân khúc CUV cỡ C - Territory và CX-5 bỏ xa phần còn lại",
+    "content": "Trong phân khúc CUV cỡ C, Mazda CX-5 và Ford Territory đang chiếm ưu thế vượt trội với tổng doanh số gần 60% thị phần. Trong hai tháng đầu năm 2025, CX-5 vẫn dẫn đầu với 923 xe bán ra, trong khi Territory theo sau nhưng vẫn còn khoảng cách lớn. Các đối thủ như Honda CR-V, Hyundai Tucson và Kia Sportage ghi nhận doanh số thấp hơn nhiều, cho thấy sự thống trị của CX-5 và Territory.",
+    "link": "https://vnexpress.net/phan-khuc-cuv-co-c-territory-va-cx-5-bo-xa-phan-con-lai-4863304.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Tại sao CX-5 và Territory lại chiếm ưu thế trong phân khúc CUV cỡ C?",
+    "answers": [
+      {
+        "text": "CX-5 và Territory có doanh số cao và thị phần lớn.",
+        "correct": true
+      },
+      {
+        "text": "Các đối thủ đều có doanh số tốt hơn.",
+        "correct": false
+      },
+      {
+        "text": "CX-5 không còn sản xuất nữa.",
+        "correct": false
+      },
+      {
+        "text": "Territory là mẫu xe mới nhất trên thị trường.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Học ngành nào để 4-5 năm nữa vẫn có việc làm?",
+    "content": "Bài viết đề cập đến nỗi lo lắng của học sinh và phụ huynh về việc chọn ngành học trong bối cảnh công nghệ AI đang phát triển mạnh mẽ. Nhiều ngành như tài chính, ngân hàng và truyền thông đối mặt với nguy cơ bị thay thế bởi AI, khiến các em lo ngại về cơ hội việc làm trong tương lai. Tuy nhiên, các chuyên gia khẳng định rằng công nghệ sẽ không hoàn toàn thay thế con người mà còn tạo ra nhiều cơ hội mới, và người học cần không ngừng cải thiện kỹ năng để thích ứng với thị trường lao động.",
+    "link": "https://dantri.com.vn/giao-duc/hoc-nganh-nao-de-4-5-nam-nua-van-co-viec-lam-20250319213313023.htm",
+    "cat": "giao-duc",
+    "positivity": 7,
+    "importance": 9,
+    "question": "Ngành học nào nên chọn để có việc làm trong 4-5 năm tới?",
+    "answers": [
+      {
+        "text": "Tài chính - ngân hàng",
+        "correct": true
+      },
+      {
+        "text": "Báo chí truyền thông",
+        "correct": false
+      },
+      {
+        "text": "Kỹ thuật phần mềm",
+        "correct": false
+      },
+      {
+        "text": "Nghệ thuật sáng tạo",
+        "correct": false
+      },
+      {
+        "text": "Y tế và công nghệ sinh học",
         "correct": false
       }
     ]
@@ -3163,33 +3194,6 @@
     ]
   },
   {
-    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
-    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
-    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
-    "answers": [
-      {
-        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường sản xuất xe điện mới.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do tài chính cá nhân của nhân viên.",
-        "correct": false
-      },
-      {
-        "text": "Để mở rộng thị trường sang châu Á.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
     "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
     "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
@@ -3212,6 +3216,33 @@
       },
       {
         "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
         "correct": false
       }
     ]
@@ -3642,37 +3673,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
-    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
-    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
-    "answers": [
-      {
-        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi",
-        "correct": false
-      },
-      {
-        "text": "Chóng mặt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
     "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
     "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
@@ -3699,6 +3699,37 @@
       },
       {
         "text": "6 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
+    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
+    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
+    "answers": [
+      {
+        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi",
+        "correct": false
+      },
+      {
+        "text": "Chóng mặt",
         "correct": false
       }
     ]
@@ -4796,37 +4827,6 @@
       },
       {
         "text": "Sử dụng tia xạ để tiêu diệt khối u",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tàu ngầm của Mỹ hiện diện ngoài khơi Australia",
-    "content": "Tàu ngầm tấn công lớp Virginia USS Minnesota của Mỹ đã cập cảng HMAS Stirling tại Australia, đánh dấu sự hiện diện của tàu ngầm hạt nhân Mỹ thứ 7 kể từ khi thỏa thuận AUKUS được ký kết vào năm 2021. USS Minnesota sẽ lưu trú tại đây và là một phần trong kế hoạch tăng cường lực lượng hải quân Mỹ tại khu vực Ấn Độ Dương - Thái Bình Dương. Dự kiến, Australia sẽ biên chế thêm nhiều nhân sự để hỗ trợ cho hoạt động tàu ngầm hạt nhân trong tương lai.",
-    "link": "https://dantri.com.vn/the-gioi/tau-ngam-cua-my-hien-dien-ngoai-khoi-australia-20250317144812745.htm",
-    "cat": "the-gioi",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Tàu ngầm USS Minnesota của Mỹ đã cập cảng nào tại Australia?",
-    "answers": [
-      {
-        "text": "HMAS Stirling",
-        "correct": true
-      },
-      {
-        "text": "Sydney",
-        "correct": false
-      },
-      {
-        "text": "Melbourne",
-        "correct": false
-      },
-      {
-        "text": "Brisbane",
-        "correct": false
-      },
-      {
-        "text": "Perth",
         "correct": false
       }
     ]
